--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Freelancer - Webdesign and Developer">
+    <meta name="author" content="Vânia Rosa">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Freelancer - Webdesign and Developer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
