--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Freelancer - Webdesign and Developer">
     <meta name="author" content="Vânia Rosa">
 
-    <title>Freelancer - Webdesign and Developer</title>
+    <title>Freelancer - Code & Design</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Freelancer - Code & Design</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Freelancer - Code & Design</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Developer - User Experience Designer</span>
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Contact me, submit a question or just say hello!</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -243,8 +243,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>Rua José w. Koelzer, 182
+                            <br>Santa Cruz do Sul, BRA 96845-050</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <p>Freelancer - Code & Design created by <a href="https://vaniarosa.github.io/portfolio/">Vânia Rosa</a>.</p>
                     </div>
                 </div>
             </div>
@@ -277,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Freelancer - Code & Design 2016
                     </div>
                 </div>
             </div>
