--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -243,7 +243,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Rua José w. Koelzer, 182
+                        <p>José W. Koelzer, 182
                             <br>Santa Cruz do Sul, BRA 96845-050</p>
                     </div>
                     <div class="footer-col col-md-4">
