--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -267,7 +267,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
+                        <h3>About Freelancer - Code & Design</h3>
                         <p>Freelancer - Code & Design created by <a href="https://vaniarosa.github.io/portfolio/">Vânia Rosa</a>.</p>
                     </div>
                 </div>
