--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,14 +14,16 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+
+
     <!-- Theme CSS MODIFICAR PARA .MIN DEPOIS-->
     <link href="css/freelancer.css" rel="stylesheet">
     <link href="css/animated-headline-style.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <!-- Roboto -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
 
     <!-- Modernizr -->
     <script src="js/modernizr.js"></script>
@@ -76,8 +78,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <!--<img class="img-responsive" src="img/profile.jpg" alt="">-->
-                    <div class="intro-text">
-
+                    <div class="intro-text">                      
                         <span class="name">Code & Design</span>
                         <hr class="star-light">
                         <div class="cd-intro">
