--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,7 +44,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Vânia Rosa</a>
+                <a class="navbar-brand" href="#page-top">Code & Design</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -93,7 +93,7 @@
         </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
+    <!-- Portfolio Grid Section Start -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -166,8 +166,8 @@
             </div>
         </div>
     </section>
-
-    <!-- About Section -->
+    <!-- Portfolio Gridsection end -->
+    <!-- About Section Start -->
     <section class="success" id="about">
         <div class="container">
             <div class="row">
@@ -191,8 +191,8 @@
             </div>
         </div>
     </section>
-
-    <!-- Contact Section -->
+    <!-- About Section end -->
+    <!-- Contact Section Start -->
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -244,18 +244,24 @@
             </div>
         </div>
     </section>
-
+    <!-- Contact Section end -->
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
+               <div class="row">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.7105680120953!2d-52.43685338489243!3d-29.7281420819985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951ca36f6aec7b11%3A0xc8a454fdf257a70b!2sLapse+Vertigo!5e0!3m2!1spt-BR!2sbr!4v1478808359745" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
                 <div class="row">
-                    <div class="footer-col col-md-6">
+                    <div class="footer-col">
                         <h3>Location</h3>
-                        <p>José W. Koelzer, 182
-                            <br>Santa Cruz do Sul, BRA 96845-050</p>
+                        <p>José W. Koelzer, 182. Santa Cruz do Sul, BRA 96845-050</p>
+                        <p class="info-mail">vaniafdarosa@gmail.com</p>
                     </div>
-                    <div class="footer-col col-md-6">
+                  </div>
+
+                  <div class="row">
+                    <div class="footer-col">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
@@ -273,6 +279,9 @@
                             <li>
                                 <a href="https://dribbble.com/vaniarosa" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                             </li>
+                            <li>
+                                <a href="https://github.com/vaniarosa" class="btn-social btn-outline"><i class="fa fa-github"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -282,7 +291,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Vânia Rosa - 2016
+                      Code & Design. Created with <i class="fa fa-heart fa-1" aria-hidden="true"></i> ! By Vânia Rosa - 2016
                     </div>
                 </div>
             </div>
