--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Freelancer Web Developer and Designer">
+    <meta name="description" content="web developer, front-end, web designer, php">
     <meta name="author" content="Vânia Rosa">
 
-    <title>Freelancer - Code & Design</title>
+    <title>Vânia Rosa - Code & Design</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS MODIFICAR PARA .MIN DEPOIS-->
-    <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/animated-headline-style.min.css" rel="stylesheet">
-
+    <link href="css/animate.css" rel="stylesheet" >
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <!--<img class="img-responsive" src="img/profile.jpg" alt="">-->
                     <div class="intro-text">
-                        <span class="name">Code & Design</span>
+                        <span class="name wow bounceInUp" data-wow-duration="2s" data-wow-delay="5s">Code & Design</span>
                         <hr class="star-light">
                         <div class="cd-intro">
                       		<h1 class="cd-headline letters type">
@@ -545,10 +545,14 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
-
+    <!-- WOW JavaScript -->
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 
     <!-- Theme JavaScript -->
-    <script src="js/freelancer.min.js"></script>
+    <script src="js/portfolio.min.js"></script>
 
 
 </body>
